integrating bootstrap with thyemeleaf

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,8 +3,87 @@
 <head>
 <meta charset="UTF-8">
 <title>Recipe</title>
+<link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
 </head>
 <body>
-	<h1>Welcome to Recipe</h1>
+
+	<div class="container">
+		<div class="jumbotron">
+			<h1>Welcome to Recipe</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+				do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+				enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+				ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+				reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+				pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+				culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<div class="row text-center text-lg-left">
+
+			<div class="col-lg-3 col-md-4 col-6">
+				<a href="#" class="d-block mb-4 h-100"> <img
+					class="img-fluid img-thumbnail"
+					src="https://www.nps.gov/subjects/camping/images/recipe_1.jpg?maxwidth=1200&maxheight=1200&autorotate=false"
+					alt="">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-6">
+				<a href="#" class="d-block mb-4 h-100"> <img
+					class="img-fluid img-thumbnail"
+					src="https://musthavemom.com/wp-content/uploads/2017/08/easy-bbq-kabobs.jpg"
+					alt="">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-6">
+				<a href="#" class="d-block mb-4 h-100"> <img
+					class="img-fluid img-thumbnail"
+					src="https://upload.wikimedia.org/wikipedia/commons/0/05/Classic-spaghetti-carbonara.jpg"
+					alt="">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-6">
+				<a href="#" class="d-block mb-4 h-100"> <img
+					class="img-fluid img-thumbnail"
+					src="https://i2.wp.com/tmrblog.com/wp-content/uploads/2019/10/Food3-2.jpg?fit=960%2C720&ssl=1"
+					alt="">
+				</a>
+			</div>
+		</div>
+		<div class="row text-center text-lg-left">
+
+			<div class="col-lg-3 col-md-4 col-6">
+				<a href="#" class="d-block mb-4 h-100"> <img
+					class="img-fluid img-thumbnail"
+					src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQALv-myBstflTpmF1VERlwstlVS4WF0n3tPqyedk2DmtAIYsnp&usqp=CAU"
+					alt="">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-6">
+				<a href="#" class="d-block mb-4 h-100"> <img
+					class="img-fluid img-thumbnail"
+					src="https://upload.wikimedia.org/wikipedia/commons/6/60/Sushi_platter.jpg"
+					alt="">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-6">
+				<a href="#" class="d-block mb-4 h-100"> <img
+					class="img-fluid img-thumbnail"
+					src="https://storage.needpix.com/rsynced_images/a-chunk-of-beef-2.jpg"
+					alt="">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-6">
+				<a href="#" class="d-block mb-4 h-100"> <img
+					class="img-fluid img-thumbnail"
+					src="https://www.publicdomainpictures.net/pictures/290000/velka/raw-meats.jpg"
+					alt="">
+				</a>
+			</div>
+		</div>
+	</div>
+
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script th:href="@{/js/bootstrap.js}"></script>
 </body>
 </html>
