--- a/src/main/resources/templates/edit-recipe.html
+++ b/src/main/resources/templates/edit-recipe.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Recipe</title>
+<title>Edit Recipe</title>
 <link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
 <link rel="stylesheet"
 	href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
@@ -10,10 +10,9 @@
 	href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css" />
 </head>
 <body>
-
 	<div class="container">
 		<div class="jumbotron">
-			<h1>Add New Recipe</h1>
+			<h1>Edit Recipe</h1>
 		</div>
 
 		<div class="row">
@@ -25,7 +24,7 @@
 		<div class="row">
 			<div class="col-sm-3"></div>
 			<div class="col-sm-6">
-				<form class="form-group" action="#" th:action="@{/recipes/new}"
+				<form action="#" th:action="@{/recipes/edit/{id}(id=${recipe.id})}"
 					th:object="${recipe}" method="post">
 
 					<div class="form-group">
@@ -33,7 +32,6 @@
 							class="form-control" th:field="*{name}" id="name"
 							placeholder="Name"> <span
 							th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
-						<br />
 					</div>
 
 					<div class="form-group">
@@ -43,14 +41,15 @@
 							th:if="${#fields.hasErrors('description')}"
 							th:errors="*{description}"></span>
 					</div>
-
+					
 					<input type="submit" value="Save" class="btn btn-default">
-
 				</form>
 			</div>
 			<div class="col-sm-3"></div>
 		</div>
+
 	</div>
+
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script th:href="@{/js/bootstrap.js}"></script>
