--- a/src/main/resources/templates/edit-recipe.html
+++ b/src/main/resources/templates/edit-recipe.html
@@ -17,7 +17,8 @@
 
 		<div class="row">
 			<p class="lead">
-				<a href="/recipes">Back Recipes</a>
+				<a href="/recipes" class="btn btn-primary"><span
+					class="glyphicon glyphicon-arrow-left"></span></a>
 			</p>
 		</div>
 
@@ -41,7 +42,7 @@
 							th:if="${#fields.hasErrors('description')}"
 							th:errors="*{description}"></span>
 					</div>
-					
+
 					<input type="submit" value="Save" class="btn btn-default">
 				</form>
 			</div>
