--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -20,7 +20,7 @@
 
 			<div class="row">
 				<p class="lead">
-					<a href="/recipes/new">Add Recipe</a>
+					<a href="/recipes/new" class="btn btn-primary" >Add Recipe</a>
 				</p>
 
 				<table class="table">
@@ -42,9 +42,9 @@
 							<td><a th:href="@{/recipes/view/{id}(id=${recipe.id})}"><span
 									class="glyphicon glyphicon-eye-open"></span></a></td>
 							<td><a th:href="@{/recipes/edit/{id}(id=${recipe.id})}"><span
-									class="glyphicon glyphicon-edit"></a></td>
+									class="glyphicon glyphicon-edit"></span></a></td>
 							<td><a th:href="@{/recipes/delete/{id}(id=${recipe.id})}"><span
-									class="glyphicon glyphicon-trash"></a></td>
+									class="glyphicon glyphicon-trash"></span></a></td>
 						</tr>
 					</tbody>
 				</table>
