--- a/src/main/resources/templates/edit-recipe.html
+++ b/src/main/resources/templates/edit-recipe.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="container">
 		<div class="jumbotron">
-			<h1>Edit Recipe</h1>
+			<h1 th:text="#{editRecipe}"></h1>
 		</div>
 
 		<div class="row">
@@ -29,14 +29,14 @@
 					th:object="${recipe}" method="post">
 
 					<div class="form-group">
-						<label for="name">Recipe Name</label> <input type="text"
+						<label for="name" th:text="#{name}"></label> <input type="text"
 							class="form-control" th:field="*{name}" id="name"
 							placeholder="Name"> <span
 							th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
 					</div>
 
 					<div class="form-group">
-						<label for="description">Recipe Description</label> <input
+						<label for="description" th:text="#{description}"></label> <input
 							type="text" class="form-control" th:field="*{description}"
 							id="description" placeholder="Description"> <span
 							th:if="${#fields.hasErrors('description')}"
