--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,9 +7,10 @@
 </head>
 <body>
 
+
 	<div class="container">
 		<div class="jumbotron">
-			<h1>Welcome to Recipe</h1>
+			<h1 th:text="#{greeting}"></h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
 				do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
 				enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
