--- a/src/main/resources/templates/new-recipe.html
+++ b/src/main/resources/templates/new-recipe.html
@@ -13,7 +13,7 @@
 
 	<div class="container">
 		<div class="jumbotron">
-			<h1>Add New Recipe</h1>
+			<h1 th:text="#{addNewRecipe}"></h1>
 		</div>
 
 		<div class="row">
@@ -30,7 +30,7 @@
 					th:object="${recipe}" method="post">
 
 					<div class="form-group">
-						<label for="name">Recipe Name</label> <input type="text"
+						<label for="name" th:text="#{recipeName}"></label> <input type="text"
 							class="form-control" th:field="*{name}" id="name"
 							placeholder="Name"> <span
 							th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
@@ -38,7 +38,7 @@
 					</div>
 
 					<div class="form-group">
-						<label for="description">Recipe Description</label> <input
+						<label for="description" th:text="#{recipeDescription}"></label> <input
 							type="text" class="form-control" th:field="*{description}"
 							id="description" placeholder="Description"> <span
 							th:if="${#fields.hasErrors('description')}"
