--- a/src/main/resources/templates/view-recipe.html
+++ b/src/main/resources/templates/view-recipe.html
@@ -14,7 +14,7 @@
 	<div class="container">
 
 		<div class="jumbotron">
-			<h1>View Recipe</h1>
+			<h1 th:text="#{viewRecipe}"></h1>
 		</div>
 		<div class="row">
 			<p class="lead">
@@ -35,11 +35,11 @@
 						<td th:text="${recipe.id}"></td>
 					</tr>
 					<tr>
-						<td><b>Name</b></td>
+						<td><b th:text="#{name}"></b></td>
 						<td th:text="${recipe.name}"></td>
 					</tr>
 					<tr>
-						<td><b>Description</b></td>
+						<td><b th:text="#{description}"></b></td>
 						<td th:text="${recipe.description}"></td>
 					</tr>
 				</table>
