--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Recipe</title>
+<title th:text="#{recipe}"></title>
 <link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
 </head>
 <body>
