--- a/src/main/resources/templates/edit-recipe.html
+++ b/src/main/resources/templates/edit-recipe.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Edit Recipe</title>
+<title th:text="#{editRecipe}">Edit Recipe</title>
 <link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
 <link rel="stylesheet"
 	href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
@@ -43,7 +43,7 @@
 							th:errors="*{description}"></span>
 					</div>
 
-					<input type="submit" value="Save" class="btn btn-default">
+					<input type="submit" th:value="#{saveButton}" class="btn btn-default">
 				</form>
 			</div>
 			<div class="col-sm-3"></div>
